src/objects/position__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leavetype__c</fullName>
        <label>Leave</label>
        <referenceTo>Leave__c</referenceTo>
        <relationshipLabel>positions</relationshipLabel>
        <relationshipName>positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Position Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco,CA</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>London, United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-100</fullName>
                </value>
                <value>
                    <fullName>C-200</fullName>
                </value>
                <value>
                    <fullName>C-300</fullName>
                </value>
                <value>
                    <fullName>C-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>ACT-100</fullName>
                </value>
                <value>
                    <fullName>ACT-200</fullName>
                </value>
                <value>
                    <fullName>ACT-300</fullName>
                </value>
                <value>
                    <fullName>ACT-400</fullName>
                </value>
                <value>
                    <fullName>ENG-100</fullName>
                </value>
                <value>
                    <fullName>ENG-200</fullName>
                </value>
                <value>
                    <fullName>ENG-300</fullName>
                </value>
                <value>
                    <fullName>ENG-400</fullName>
                </value>
                <value>
                    <fullName>S-100</fullName>
                </value>
                <value>
                    <fullName>S-200</fullName>
                </value>
                <value>
                    <fullName>S-300</fullName>
                </value>
                <value>
                    <fullName>S-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsibilties__c</fullName>
        <label>Responsibilties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salary</label>
        <referenceTo>Salary__c</referenceTo>
        <relationshipLabel>positions</relationshipLabel>
        <relationshipName>positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>approval__c</fullName>
        <label>approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>calc__c</fullName>
        <description>maximum pay multiplies by 4</description>
        <formula>Max_Pay__c * 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>calc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_closed__c</fullName>
        <label>date closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_open__c</fullName>
        <label>date open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>open</fullName>
                </value>
                <value>
                    <fullName>closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sub_status__c</fullName>
        <label>sub-status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>approved</fullName>
                </value>
                <value>
                    <fullName>not approved</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>position name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <recordTypes>
        <fullName>engineerUser</fullName>
        <active>true</active>
        <label>engineerUser</label>
    </recordTypes>
    <recordTypes>
        <fullName>supportUser</fullName>
        <active>true</active>
        <label>supportUser</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>myRule</fullName>
        <active>false</active>
        <errorConditionFormula>Max_Pay__c  &gt; 100000</errorConditionFormula>
        <errorDisplayField>Max_Pay__c</errorDisplayField>
        <errorMessage>Max Pay should be less than 1lac</errorMessage>
    </validationRules>
</CustomObject>